--- a/view/festival.html
+++ b/view/festival.html
@@ -1,7 +1,7 @@
 <div class="container mainfestival">
     <div class="row">
         <div class="col-lg-3">
-
+            <button class="btn btn-primary btn-block" ng-click="reload()">Delete Filter</button>
             <h4 class="text-dark">Filter by Month</h4>
             <div>
                 <form name="myForm" ng-submit="filterMonth(month)">
