--- a/css/index.css
+++ b/css/index.css
@@ -477,3 +477,5 @@ details */
     padding-top: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.header-item{
+}
