--- a/css/index.css
+++ b/css/index.css
@@ -244,7 +244,7 @@ footer {
 }
 
 .img-cart img {
-    border-radius: 1000px;
+    padding-top: 10px;
     margin: 10px;
 }
 
@@ -409,10 +409,10 @@ details */
 }
 
 .text-header {
-    color: #fff;
+    color: #fff !important;
     background: rgba(0, 0,0, 0.6);
     position: absolute;
-    top: 400px;
+    top: 550px;
     left: 650px;
     border-radius: 40px;
     padding: 10px;
@@ -420,7 +420,7 @@ details */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 :hover.text-header{
-    color: red;
+    color: red !important;
 }
 .text-home{
     color: #fff;
@@ -429,7 +429,7 @@ details */
     border-radius: 40px;
     padding: 5px;
     left: 55px;
-    top: 100px;
+    top: 140px;
     cursor: pointer;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -439,8 +439,10 @@ details */
 .day{
     margin-top: 50px;
     padding-top: 10px;
-    background-image: url(../img/Gray\ Minimalist\ Motivational\ Phone\ Wallpaper.png);
+}
+.bg-img{
     background-size: 100%;
+    background-repeat: no-repeat;
 }
 .item-text{
     color: rgb(10, 8, 8);
@@ -462,6 +464,7 @@ details */
     padding-bottom: 10px;
     border-bottom: 2px solid royalblue;
     color: darkgray;
+    font-family: 'Times New Roman' !important;
 }
 .text-item2{
     padding-bottom: 10px;
@@ -476,6 +479,4 @@ details */
 .header-item{
     padding-top: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.header-item{
 }
