edit index and news.html
fixed top header and add autoplay, loop for video in news

--- a/view/news.html
+++ b/view/news.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
         <div class="col-lg-7">
-            <video width="90%" controls>
+            <video width="90%" controls autoplay loop>
                 <source src="https://assets.mixkit.co/videos/preview/mixkit-crowd-jumping-at-the-concert-14084-large.mp4" type="video/mp4">
                 <source src="https://assets.mixkit.co/videos/preview/mixkit-crowd-jumping-at-the-concert-14084-large.mp4" type="video/ogg">
                 Your browser does not support HTML video.
